--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,23 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+#cajaPrincipal{
+    background-color: black;
+    display: flex;
+    color: white;
+    font-size: 80px;
+    justify-content: space-evenly;
+}
+
+.box{
+    background-color:rgb(26, 30, 33);
+    width: 100px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    margin-bottom : 30px;
+    margin-top : 30px;
+    box-shadow: 0px 0px 10px 2px gray;
+}
